# pd-infra

./: .gitignore  .gitmodules  Containerfile  Dockerfile  README.md  nginx.conf  start.sh
PocketDeck/pd-core/: CMakeLists.txt  compile_flags.txt  run
PocketDeck/pd-core/src/: deck.tpp  game.cpp  game.hpp  main.cpp  server.cpp  server.hpp  types.hpp
PocketDeck/pd-core/src/games/: uno.cpp  uno.hpp
scripts/: qr-gen-http.sh  qr-gen.sh  setup.sh  start.sh
